--- a/view/css/login.css
+++ b/view/css/login.css
@@ -43,8 +43,11 @@ input {
     background: none;
     border-radius: 0px 20px 20px 0px;
     border-style: solid solid solid none;
+    border-color: #333;
+    font-size: 30px;
     
 }
+/*input password*/
 
 .password {
     border-radius: 20px 0px 0px 20px;
