--- a/view/css/headerFooter.css
+++ b/view/css/headerFooter.css
@@ -20,3 +20,17 @@
     position: absolute;
     right: 2%;
 }
+
+.footer{
+    width: 100%;
+    margin-top: 15px;
+    height: 2.5rem; 
+    background-color: var(--ColorX);
+}
+
+.footer p{
+    display: -webkit-inline-flex;
+    font-weight: bold;
+    float: right;
+    padding-right: 10px;
+}
