--- a/view/css/login.css
+++ b/view/css/login.css
@@ -92,6 +92,17 @@ html, body {
     color: var(--ColorMainFont);
 }
 
+.fa{
+    display: table-footer-group;
+    position: initial;
+    float: left;
+    border-color: var(--Colorfont);
+    height: 60px;
+    font-size: 25px;
+    width: 25px;
+    text-align: center;
+}
+
 .buttomBtn {
     /* border: black dashed 1px; */
     width: 70%;
@@ -124,12 +135,22 @@ html, body {
     color: var(--ColorError);
 }
 
+.PasswdMed{
+    color: yellow;
+}
+
+.PasswdGood{
+    color: green;
+}
+
 .leftBtn {float: right; min-width: 150px; max-width: 300px;}
 .rightBtn {float: left; min-width: 100px; max-width: 300px;}
 
 @media (pointer:none), (pointer:coarse){
     .form, .buttomBtn{width: 94%; margin-left: 3%;}
-    .form input {height: 100px; font-size: 60px;}
+    .form input {height: 100px; font-size: 60px; width: calc(100% - 90px);}
     .buttomBtn{height: 70px; margin-top: 40px;}
+    .fa{font-size: 50px;}
+    /* .form .left{padding-left: 50px;} */
     
 }
