--- a/app/view/css/login.css
+++ b/app/view/css/login.css
@@ -97,10 +97,12 @@ html, body {
     position: initial;
     float: left;
     color: var(--ColorMainFont);
-    height: 60px;
+    /* height: 60px; */
     font-size: 25px;
     width: 25px;
     text-align: center;
+    cursor: pointer;
+    /* border: hotpink dashed 1px; */
 }
 
 .buttomBtn {
