add menu & profile photo
Signed-off-by: alizaynoune <simo.jokir@gmail.com>

--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -20,12 +20,12 @@
 
 .navBar .navLeft {
     position: absolute;
-    left: 2%;
+    left: 10px;
 }
 
 .navBar .navRight{
     position: absolute;
-    right: 2%;
+    right: 10px;
 }
 
 .footer{
