--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -30,7 +30,7 @@
     align-items: center;
     transform: translateX(100%);
     background-color: rgba(255,255,255,0.3);
-    transition: all 0.4s;
+    transition: all 1s;
     border-radius: 20px 0 0 20px;
 }
 
@@ -42,7 +42,6 @@
     height: 80px;
     font-weight:bold;
     cursor: pointer;
-    transition: all 0.3s;
     position: relative;
     padding: 0px;
   }
@@ -106,15 +105,12 @@
 
   .hidden li{
       transform: translateX(120%);
-      transition: all 0.5s;
+      /* transition: all 0.5s; */
   }
 
-  .show {
+  .show , .show li{
     transform: translateX(0%);
-    transition: all 0.5s;
+    /* transition: all 0.5s; */
   }
 
-  .show li{
-    transform: translateX(0%);
-    transition: all 0.5s;
-  }
+  
