--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -20,24 +20,39 @@
     
 }
 
+.btnActive [id='line1'] {
+  transform: rotate(-45deg) translate(-1px,9px);
+  width: 25px;
+}
+.btnActive [id='line2'] {
+  opacity: 0;
+  background: none;
+}
+.btnActive [id='line3'] {
+  transform: rotate(45deg) translate(1px,-6px);
+  width: 25px;
+ 
+}
+
 .list {
     list-style: none;
-    position:fixed;
+    margin-top: 80px;
+    justify-content: space-around;
+    display: block;
+    position: absolute;
     width: 300px;
-    height: 80%;
+    height: 800px;
     right: 0%;
-    transform: translateX(100%);
-    align-items: center;
-    transform: translateX(100%);
+    transform: translateX(110%);
     background-color: rgba(255,255,255,0.3);
     transition: all 1s;
     border-radius: 20px 0 0 20px;
 }
 
 .list li {
-    justify-content: space-around;
+    
     text-align: left;
-    margin-top: 4px;
+    margin-top: calc(100% / 6);
     font-size: 28px;
     height: 80px;
     font-weight:bold;
@@ -53,7 +68,7 @@
     content: '';
     position: absolute;
     width: 100%;
-    height: 80%;
+    height: 100%;
     z-index: 1;
     opacity: 0;
     transition: all 0.3s;
@@ -86,31 +101,46 @@
 .img {
     width: 80px;
     height: 80px;
+    position: absolute;
+    left: calc(0% - 40px);
     border-radius: 50%;
 }
 
-.btnActive [id='line1'] {
-    transform: rotate(-45deg) translate(-1px,9px);
-    width: 25px;
-  }
-  .btnActive [id='line2'] {
-    opacity: 0;
-    background: none;
-  }
-  .btnActive [id='line3'] {
-    transform: rotate(45deg) translate(1px,-6px);
-    width: 25px;
-   
-  }
+
 
   .hidden li{
-      transform: translateX(120%);
-      /* transition: all 0.5s; */
+      transform: translateX(100%);
   }
 
   .show , .show li{
-    transform: translateX(0%);
-    /* transition: all 0.5s; */
+    transform: translateX(3%);
+  }
+
+  @media (pointer:none), (pointer:coarse) {
+    .img {
+      height: 100px;
+      width: 100px;
+    }
+    .list{
+      margin-top: 100px;
+    }
+    .menuLine{
+      width: 40px;
+      height: 5px;
+      margin-top: 5px;
+      margin-right: 5px;
+    }
+    .btnActive [id='line1'] {
+      transform: rotate(-45deg) translate(-10px,5px);
+      width: 45px;
+    }
+
+    .btnActive [id='line3'] {
+      transform: rotate(45deg) translate(-9px,-5px);
+      width: 45px;
+     
+    }
+
   }
 
   
