--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -36,20 +36,30 @@
 }
 
 .footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    margin-top: 15px;
+    /* flex-shrink: 0; */
+    /* flex: 1; */
+    /* position: sticky; */
+    /* margin-top: 0%; */
+    /* position: relative; */
+    /* margin-top: 20px; */
+    /* position: absolute; */
+    /* flex: 1; */
+    /* margin-bottom: 0px; */
+    /* bottom: 0px; */
+    /* width: 100%; */
+
+
+    /* margin-top: 15px; */
     height: 2.2rem; 
     background-color: var(--Color2);
-    /* border: darkblue dashed 1px; */
+    border: darkblue dashed 1px;
 }
 
 .footer p{
     font-weight: bold;
     float: right;
-    margin-top: 6px;
-    padding-right: 10px;
+    /* margin-top: 6px; */
+    /* padding-right: 10px; */
 }
 
 @media (pointer:none), (pointer:coarse) {
