--- a/app/view/css/menu.css
+++ b/app/view/css/menu.css
@@ -1,9 +1,3 @@
-.head_profile {
-    /* border: brown dashed 1px; */
-    /* display: inline-block; */
-    /* padding: 0%; */
-}
-
 .list {
     list-style: none;
     margin-top: 0;
@@ -11,18 +5,18 @@
     /* display: block; */
     /* position:fixed; */
     /* position:-ms-page; */
-    /* position: relative; */
+    position: absolute;
     width: 300px;
-    height: 500%;
+    height: calc(100% * 6);
+    right: 0%;
     /* padding: auto; */
     /* right: 0%; */
     transform: translateX(110%);
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(110, 235, 249,0.5);
     transition: all 1s;
     border-radius: 20px 0 0 20px;
     -webkit-border-radius: 20px 0 0 20px;
     -moz-border-radius: 20px 0 0 20px;
-    /* display: none; */
 }
 
 .list li {
@@ -103,26 +97,6 @@
       height: 100px;
       width: 100px;
     }
-    /* .list{
-      margin-top: 100px;
-    } */
-    /* .menuLine{
-      width: 40px;
-      height: 5px;
-      margin-top: 5px;
-      margin-right: 5px;
-    }
-    .btnActive [id='line1'] {
-      transform: rotate(-45deg) translate(-10px,5px);
-      width: 45px;
-    }
-
-    .btnActive [id='line3'] {
-      transform: rotate(45deg) translate(-9px,-5px);
-      width: 45px;
-     
-    } */
-
   }
 
   
