--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -5,36 +5,77 @@
     -moz-appearance: none;
     appearance: none;
     /* margin-bottom: -1px; */
-    height: 105px;
+    /* height: 105px; */
     /* -webkit-text-size-adjust: auto; */
 }
 
 .img_text {
-    display: block;
-    position: relative;
+    display: inline-block;
+    padding: 0%;
+    margin: 0%;
+    text-align: center;
+    /* position: relative; */
     width: 200px;
     height: 200px;
     margin-left: calc(50% - 100px);
-    /* border: dashed 1px green; */
+    border-radius: 20%;
+    cursor: pointer;
+    /* border: dashed 1px green;  */
   }
   
   /* Bottom right text */
 .tex_on_img {
   border-radius: 10px;
-  position: absolute;
-  width: 80%;
-  bottom: 35%;
-  /* right: 0%; */
+  margin-top: -70%;
+  /* background: none; */
   background-color: rgba(255,255,255,0.1);
-  /* color: white; */
-  padding-left: 20px;
-  padding-right: 20px;
 }
 .img_profile{
     width: 100%;
     height: 100%;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    cursor: pointer;
+    border-radius: 20%;
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    /* cursor: pointer; */
 }
+
+.modal{
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: calc(50% - 400px);
+  top: 10%;
+  width: 800px;
+  height: 300px;
+  overflow: auto;
+  background-color: rgba(110, 235, 249,0.5);
+  justify-content: space-around;
+  /* display: none; */
+}
+
+/* [type="file"]   */
+.modal input{
+  height: 0;
+  overflow: hidden;
+  width: 0;
+}
+
+/* [type="file"] + label  */
+.modal label{
+  background: #f15d22;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+	font-family: 'Rubik', sans-serif;
+	font-size: inherit;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  outline: none;
+  padding: 1rem 50px;
+  position: relative;
+  transition: all 0.3s;
+  vertical-align: middle;
+}
+  
