--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -1,81 +1,103 @@
+@import "Colors.css";
 
-.select{
-    text-align-last:center;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    /* margin-bottom: -1px; */
-    /* height: 105px; */
-    /* -webkit-text-size-adjust: auto; */
-}
 
-.img_text {
-    display: inline-block;
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-    /* position: relative; */
+
+.conten_img {
     width: 200px;
     height: 200px;
     margin-left: calc(50% - 100px);
     border-radius: 20%;
     cursor: pointer;
-    /* border: dashed 1px green;  */
+    border: dashed 1px green;
+    overflow: hidden;
   }
   
-  /* Bottom right text */
-.tex_on_img {
-  border-radius: 10px;
-  margin-top: -70%;
-  /* background: none; */
-  background-color: rgba(255,255,255,0.1);
-}
-.img_profile{
+.change_avatar{
     width: 100%;
     height: 100%;
     border-radius: 20%;
+    overflow: hidden;
     -webkit-border-radius: 20%;
     -moz-border-radius: 20%;
-    /* cursor: pointer; */
 }
+
+.conten_img::before {
+  content: "click to change";
+  position: absolute;
+  margin-top: 100px;
+  margin-left: 50px;
+  display: none;
+}
+
+.conten_img:hover::before {
+  display: block;  
+}
+
 
 .modal{
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: calc(50% - 400px);
-  top: 10%;
-  width: 800px;
-  height: 300px;
-  overflow: auto;
-  background-color: rgba(110, 235, 249,0.5);
-  justify-content: space-around;
-  /* display: none; */
+  display: inline-block;
+  border-radius: 20px;
+  height: 500px;
+  width: 90%;
+  max-width: 1000px;
+  padding: 0%;
+  /* align-self: center; */
+  top: 80px;
+  position: absolute;
+  background-color: rgba(255,255,255,0.8);
+  /* justify-content: space-around; */
+  /* border: orangered dashed 2px; */
 }
 
-/* [type="file"]   */
+.btn-1{left: 20px;}
+.btn-2{right: calc(50% - 40px);}
+.cancel{right: 20px;}
+
 .modal input{
-  height: 0;
   overflow: hidden;
-  width: 0;
+  display: none;
 }
 
-/* [type="file"] + label  */
 .modal label{
-  background: #f15d22;
   border: none;
-  border-radius: 5px;
-  color: #fff;
+  border-radius: 50px;
   cursor: pointer;
   display: inline-block;
-	font-family: 'Rubik', sans-serif;
-	font-size: inherit;
-  font-weight: 500;
-  margin-bottom: 1rem;
+  font-weight: bold;
   outline: none;
   padding: 1rem 50px;
-  position: relative;
+  position: absolute;
   transition: all 0.3s;
-  vertical-align: middle;
-}
+  bottom: 20px;
   
+}
+
+.modal label{
+  background-color: var(--Button);
+  overflow: hidden;
+}
+
+.btn-1::before{content: "\f093";}
+.btn-2::before{content: "\f030";}
+.cancel::before{content: "\f00d";}
+
+
+label::before{
+  font-family: "FontAwesome";
+  font-size: 100%;
+  height: 100%;
+  right: 130%;
+  line-height: 3.3;
+  position: absolute;
+  top: 0px;
+  transition: all 0.3s;
+}
+.modal label:hover {background-color: var(--ButtonActive);}
+.modal label:hover::before {right: 75%;}
+
+.select{
+  text-align-last:center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
