--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -1,6 +1,9 @@
 @import "Colors.css";
+/* @import "login.css"; */
 
-
+.success{
+  color: var(--Success);
+}
 
 .conten_img {
     width: 200px;
@@ -134,6 +137,12 @@ label::before{
 .msj_new_av{
   text-align: center;
   color: white;
+}
+
+.delete {
+  margin-top: 50px;
+  margin-bottom: 200px;
+  left: 50%;
 }
 
 @media only screen and (max-width: 600px){
