--- a/app/view/css/headerFooter.css
+++ b/app/view/css/headerFooter.css
@@ -1,3 +1,27 @@
+
+html, body {
+    background: var(--ColorX);
+    height: 100%;
+    width: 100%;
+    padding: 0%;
+    /* border: forestgreen dashed 2px; */
+    margin: auto;
+    background-attachment: fixed;
+    overflow: auto;
+    overflow-x: hidden;
+    /* display:table-cell; */
+}
+
+* {
+    font-style: oblique;
+}
+
+.content {
+    height: auto;
+    margin-bottom: 3rem;
+}
+
+
 .navBar {
     width: 100%;
     height: 80px;
