--- a/app/view/css/form.css
+++ b/app/view/css/form.css
@@ -1,9 +1,3 @@
-@import "headerFooter.css";
-@import "menu.css";
-@import "Colors.css";
-
-
-
 
 .form{
     text-align: center;
@@ -12,6 +6,7 @@
     height: auto;
     display: inline-block;
     margin-left: 15%;
+    margin-top: 20px;
     /* border: dashed deeppink 1px; */
 }
 
@@ -86,34 +81,7 @@
     cursor: pointer;
 }
 
-.buttomBtn {
-    width: 70%;
-    height: 52px;
-    margin-left: 15%;
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 90px;
-}
 
-.button {
-    border-radius: 10rem;
-    background: var(--Button);
-    font-weight: bold;
-    color: var(--Colorfont);
-    width: 30%;
-    text-decoration: none;
-    text-align: center;
-    height: 100%;
-    min-width: 150px;
-    max-width: 300px;
-}
-
-.button:hover{background: var(--ButtonActive);}
-
-.button:focus, .submit:focus{
-    background-color: var(--Color0);
-    outline-style: none;
-}
 
 .error{
     color: var(--Error);
@@ -127,12 +95,10 @@
     color: var(--Success);
 }
 
-.leftBtn {float: right;}
-.rightBtn {float: left;}
-.centerBtn {float: right; margin-right: calc(50% - 20px);}
+
 
 @media (pointer:none), (pointer:coarse){
-    .form, .buttomBtn{width: 94%; margin-left: 3%;}
+    .form {width: 94%; margin-left: 3%;}
     .form input {
         height: 100px;
         font-size: 60px;
@@ -140,7 +106,6 @@
         border-width: 3px;
     }
     .form .left .select{margin-top: -3px;}
-    .buttomBtn{height: 70px; margin-top: 40px;}
     .fa{font-size: 50px;}
     /* .form .left{padding-left: 50px;} */
     
