--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -1,5 +1,4 @@
-@import "Colors.css";
-/* @import "form.css"; */
+/* @import "Colors.css"; */
 
 .success{
   color: var(--Success);
@@ -56,39 +55,16 @@
   height: 500px;
 }
 
-
-
 .btn-1{left: 20px;}
 .btn-2{right: calc(50% - 70px);}
 .cancel{right: 20px; top: 20px;}
 .ok{right: 20px;}
 
-.modal input{
-  overflow: hidden;
-  display: none;
-}
-
-
-.modal label{
-  display: none;
-  border: none;
-  border-radius: 50px;
-  cursor: pointer;
-  font-weight: bold;
-  outline: none;
-  padding: 1rem 50px;
-  position: absolute;
-  transition: all 0.3s;
-  bottom: 20px;
-  height: 25px;
-  width: 40px;
-}
-
 .modal img{
   display: none;
 }
 
-.modal-show label{
+.modal-show .Btn{
   display: block;
 }
 
@@ -100,32 +76,16 @@
   border-radius: 20px;
   margin-left: 20px;
   margin-top: 15px;
-  /* border : none; */
-  /* border: orangered dashed 2px; */
-}
-
-.modal label{
-  background-color: var(--Button);
-  overflow: hidden;
 }
 
 .btn-1::before{content: "\f093";}
 .btn-2::before{content: "\f030";}
 .cancel::before{content: "\f00d";}
 
-
-label::before{
-  font-family: "FontAwesome";
-  font-size: 100%;
-  height: 100%;
-  right: 130%;
-  line-height: 3.3;
-  position: absolute;
-  top: 0px;
-  transition: all 0.3s;
+.Btn{
+  display: none;
+  bottom: 20px;
 }
-.modal label:hover {background-color: var(--ButtonActive);}
-.modal label:hover::before {right: 75%;}
 
 .select{
   text-align-last:center;
@@ -145,6 +105,29 @@ label::before{
   left: 50%;
 }
 
+
+
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
 @media only screen and (max-width: 600px){
   .modal-show{
     width: 100%;
@@ -158,15 +141,10 @@ label::before{
   }
 
   .btn-1{left: 20px;}
-  .btn-2{
-    right: 20px;
-  }
+  .btn-2{right: 20px;}
   .ok{
     top: 20px;
     left: 20px;
-  }
-  label::before{
-    right: 75%;
   }
   .conten_img::after {
     left: 20%;
