--- a/app/view/css/settings.css
+++ b/app/view/css/settings.css
@@ -131,7 +131,7 @@ input:checked + .slider:before {
 @media only screen and (max-width: 600px){
   .modal-show{
     width: 100%;
-    height: 80%;
+    height: 500px;
     margin: 0%;
   }
 
