--- a/app/view/css/camera.css
+++ b/app/view/css/camera.css
@@ -19,14 +19,18 @@
     height: 90%;
     margin-left: 0.5%;
     background-color: gainsboro;
+    max-width: 800px;
+    max-height: 800px;
     /* display: inline; */
 }
 
-#canva , #out{
+#canva , #hidden_canva{
     /* border: red dashed 2px; */
     width: 49%;
     height: 90%;
     margin-right: 0.5%;
+    max-width: 800px;
+    max-height: 800px;
     /* background-color: fuchsia; */
 }
 
@@ -55,6 +59,7 @@
 
 .out-form{
     width: 40%;
+    max-width: 800px;
 }
 
 .hiddenBtn{
@@ -64,12 +69,15 @@
     opacity: 0;
 }
 
+#hidden_canva{display: none;}
+
 @media only screen and (max-width: 600px){
     .leftBtn{left: 5%;}
     .rightBtn{right: 5%;}
     .div_video{height: 100%;}
     #video{width: 99%; height: 49%;}
-    #canva, #out{width: 99%; height: 49%;}
+    #canva, #hidden_canva{width: 99%; height: 49%; margin-left: 0.5%;}
+    /* #hidden_canva{display: none;} */
     .out-form{width: 97%;}
     .btncaptuer{display: none;}
     .btncaptuerIn{
